fix newlines but spaces are not preserved yet and the text display is too long

--- a/public/css/gameplay.css
+++ b/public/css/gameplay.css
@@ -72,10 +72,8 @@ body {
 #gameStats {
     grid-column: 1/4;
     grid-row: 3/4;
-    font-size: 60px;
-    font-weight: bold;
-    animation: rainbow 8s linear infinite;
-
+    font-size: 5px;
+    white-space: pre;
 }
 
 .pop2{
